<resources>
    <string name="app_name" translatable="false">V2rayNG Pro</string>
    <string name="fork_quick_test_button">Test</string>
    <string name="fork_quick_test_cancel">Cancel</string>
    <string name="fork_quick_test_no_servers">No servers to test</string>
    <string name="fork_routing_mode_rule">Smart</string>
    <string name="fork_routing_mode_global">Proxy</string>
    <string name="fork_routing_mode_direct">Direct</string>
    <string name="fork_routing_mode_applied">Routing set to %1$s</string>
    <string name="fork_routing_mode_apply_failed">Could not switch to %1$s</string>
    <string name="usage_badge_down">↓ %1$s</string>
    <string name="usage_badge_up_down">↑ %1$s   ↓ %2$s</string>
    <string name="fork_update_banner_text">V2rayNG Pro %1$s available</string>
    <string name="fork_update_banner_dismiss">Dismiss</string>
    <string name="fork_update_banner_action">Update</string>
    <string name="fork_update_banner_title">New update available</string>
    <string name="fork_update_banner_sub">Version %1$s is ready to install</string>
    <string name="fork_update_banner_oneline">New update</string>
    <string name="fork_release_history_title">Release history</string>
    <string name="fork_release_history_empty">No release notes shipped with this build.</string>
    <string name="fork_sub_usage_title">Subscription usage</string>
    <string name="fork_sub_usage_total">Total ↓ %1$s</string>
    <string name="fork_sub_usage_total_ud">Total ↑ %1$s   ↓ %2$s</string>
    <string name="fork_config_usage_title">Config usage</string>
    <string name="fork_config_usage_empty">No traffic recorded for this config yet.</string>
    <string name="fork_config_usage_last_used">Last used: %1$s</string>
    <string name="fork_config_usage_reset">Reset this counter</string>
    <string name="fork_sub_rename_title">Rename subscription</string>
    <string name="fork_sub_menu_auto_update">Auto-update</string>
    <string name="fork_sub_menu_interval">Update every</string>
    <string name="fork_interval_60">Hourly</string>
    <string name="fork_interval_360">Every 6 hours</string>
    <string name="fork_interval_1440">Daily</string>
    <string name="fork_interval_10080">Weekly</string>
    <string name="fork_interval_custom">Custom (%1$d min)</string>
    <string name="fork_sub_rename_hint">New name</string>
    <string name="fork_sub_tab_usage">Subscription usage</string>
    <string name="fork_sub_tab_rename">Rename</string>
    <string name="fork_sub_usage_count">%1$d configs</string>
    <string name="fork_sub_usage_reset">Reset all counters</string>
    <string name="fork_sub_usage_reset_confirm">This clears every per-config usage counter on this device. Continue?</string>
    <string name="fork_sub_usage_empty">No traffic recorded on this subscription yet.</string>
    <string name="fork_sub_usage_breakdown">Per-config</string>
    <string name="fork_sub_usage_meta_last">Last used: %1$s</string>
    <string name="fork_sub_usage_meta_never">No usage recorded yet</string>
    <string name="fork_sub_usage_count_n">%1$d configs</string>
    <string name="fork_sub_menu_subtitle">Choose an action</string>
    <string name="fork_stat_label_up">UPLOAD</string>
    <string name="fork_stat_label_down">DOWNLOAD</string>
    <string name="fork_stat_label_total">TOTAL</string>
    <string name="fork_more_actions_title">More actions</string>
    <string name="fork_add_sheet_title">Add config</string>
    <string name="fork_add_section_import">Import</string>
    <string name="fork_add_section_manual">Add manually</string>
    <string name="fork_more_section_service">Service</string>
    <string name="fork_more_section_test">Test &amp; sort</string>
    <string name="fork_more_section_cleanup">Cleanup</string>
    <string name="fork_more_section_subscription">Subscription</string>
    <string name="fork_more_section_other">Other</string>
    <string name="fork_row_actions_title">Config actions</string>
    <string name="fork_about_website">Visit vatan.dev/v2rayng</string>
    <string name="fork_about_website_short">Website</string>
    <string name="fork_about_upstream_line">Based on v2rayNG %1$s</string>
    <string name="fork_drawer_website">Website</string>
    <string name="app_widget_name">Switch</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to add server</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="migration_success">Data migration success!</string>
    <string name="action_stop_service">Stop service</string>
    <string name="migration_fail">Data migration failed!</string>
    <string name="pull_down_to_refresh">Please pull down to refresh!</string>
    <string name="notification_action_stop_v2ray">Stop</string>
    <string name="toast_permission_denied">Unable to obtain the permission</string>
    <string name="toast_permission_denied_notification">Unable to obtain the notification permission</string>
    <string name="notification_action_more">Click for more</string>
    <string name="toast_services_start">Start Services</string>
    <string name="toast_services_stop">Stop Services</string>
    <string name="toast_services_success">Start Services Success</string>
    <string name="toast_services_failure">Start Services Failure</string>
    <string name="title_server">Config</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_edit_config">Edit config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_import_config_qrcode">Import from QRcode</string>
    <string name="menu_item_import_config_clipboard">Import from Clipboard</string>
    <string name="menu_item_import_config_local">Import from locally</string>
    <string name="menu_item_import_config_policy_group">Add [Policy group]</string>
    <string name="menu_item_import_config_proxy_chain">Add [Proxy chain]</string>
    <string name="menu_item_import_config_manually_vmess">Add [VMess]</string>
    <string name="menu_item_import_config_manually_vless">Add [VLESS]</string>
    <string name="menu_item_import_config_manually_ss">Add [Shadowsocks]</string>
    <string name="menu_item_import_config_manually_socks">Add [SOCKS]</string>
    <string name="menu_item_import_config_manually_http">Add [HTTP]</string>
    <string name="menu_item_import_config_manually_trojan">Add [Trojan]</string>
    <string name="menu_item_import_config_manually_wireguard">Add [Wireguard]</string>
    <string name="menu_item_import_config_manually_hysteria2">Add [Hysteria2]</string>
    <string name="del_config_comfirm">Confirm delete ?</string>
    <string name="del_invalid_config_comfirm">Please test before deleting! Confirm delete ?</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_lab_address">address</string>
    <string name="server_lab_port">port</string>
    <string name="server_lab_id">id</string>
    <string name="server_lab_alterid">alterId</string>
    <string name="server_lab_security">security</string>
    <string name="server_lab_network">Network</string>
    <string name="server_lab_more_function">Transport</string>
    <string name="server_lab_head_type">head type</string>
    <string name="server_lab_mode_type">gRPC mode</string>
    <string name="server_lab_request_host">host</string>
    <string name="server_lab_request_host_http">http host</string>
    <string name="server_lab_request_host_ws">ws host</string>
    <string name="server_lab_request_host_httpupgrade">httpupgrade host</string>
    <string name="server_lab_request_host_xhttp">xhttp host</string>
    <string name="server_lab_request_host_h2">h2 host</string>
    <string name="server_lab_request_host_quic">QUIC security</string>
    <string name="server_lab_request_host_grpc">gRPC Authority</string>
    <string name="server_lab_path">path</string>
    <string name="server_lab_path_ws">ws path</string>
    <string name="server_lab_path_httpupgrade">httpupgrade path</string>
    <string name="server_lab_path_xhttp">xhttp path</string>
    <string name="server_lab_path_h2">h2 path</string>
    <string name="server_lab_path_quic">QUIC key</string>
    <string name="server_lab_path_kcp">kcp seed</string>
    <string name="server_lab_path_grpc">gRPC serviceName</string>
    <string name="server_lab_stream_security">TLS</string>
    <string name="server_lab_stream_fingerprint">Fingerprint</string>
    <string name="server_lab_stream_alpn">Alpn</string>
    <string name="server_lab_allow_insecure">allowInsecure</string>
    <string name="server_lab_sni">SNI</string>
    <string name="server_lab_address3">address</string>
    <string name="server_lab_port3">port</string>
    <string name="server_lab_id3">password</string>
    <string name="server_lab_security3">security</string>
    <string name="server_lab_id4">Password(Optional)</string>
    <string name="server_lab_security4">User(Optional)</string>
    <string name="server_lab_encryption">encryption</string>
    <string name="server_lab_flow">flow</string>
    <string name="server_lab_public_key">PublicKey</string>
    <string name="server_lab_preshared_key">PreSharedKey(optional)</string>
    <string name="server_lab_short_id">ShortId</string>
    <string name="server_lab_spider_x">SpiderX</string>
    <string name="server_lab_mldsa65_verify">Mldsa65Verify</string>
    <string name="server_lab_secret_key">SecretKey</string>
    <string name="server_lab_reserved">Reserved(Optional, separated by commas)</string>
    <string name="server_lab_local_address">Local address (optional IPv4/IPv6, separated by commas)</string>
    <string name="server_lab_local_mtu">Mtu(optional, default 1420)</string>
    <string name="server_lab_kcp_mtu">mKCP MTU (Optional, core default 1350)</string>
    <string name="server_lab_kcp_tti">mKCP TTI (Optional, core default 50)</string>
    <string name="toast_success">Success</string>
    <string name="toast_failure">Failure</string>
    <string name="toast_none_data">There is nothing</string>
    <string name="toast_incorrect_protocol">Incorrect protocol</string>
    <string name="toast_decoding_failed">Decoding failed</string>
    <string name="title_file_chooser">Select a config</string>
    <string name="toast_require_file_manager">Please install a File Manager.</string>
    <string name="server_customize_config">Customize config</string>
    <string name="toast_config_file_invalid">Invalid config</string>
    <string name="server_lab_content">Content</string>
    <string name="toast_none_data_clipboard">There is no data in the clipboard</string>
    <string name="toast_invalid_url">Invalid URL</string>
    <string name="toast_insecure_url_protocol">Please do not use the insecure HTTP protocol subscription address</string>
    <string name="server_lab_need_inbound">Ensure inbounds port is consistent with the settings</string>
    <string name="toast_malformed_josn">Config malformed</string>
    <string name="server_lab_request_host6">Host(SNI)(Optional)</string>
    <string name="toast_action_not_allowed">Action not allowed</string>
    <string name="server_obfs_password">Obfs password</string>
    <string name="server_lab_port_hop">Port Hopping(will override the port)</string>
    <string name="server_lab_port_hop_interval">Port Hopping Interval</string>
    <string name="server_lab_bandwidth_down">Bandwidth down (Supported units: k/m/g/t)</string>
    <string name="server_lab_bandwidth_up">Bandwidth up (Supported units: k/m/g/t)</string>
    <string name="server_lab_xhttp_mode">XHTTP Mode</string>
    <string name="server_lab_xhttp_extra">XHTTP Extra raw JSON, format: { XHTTPObject }</string>
    <string name="menu_item_search">Search</string>
</resources>